package command;

/**
 * Author: Utkarsh Dayal @ descifrador17
 * Date: 31-05-2021
 * Time: 03:51 AM
 */
public interface ICommand {
    void doAction();

    void undoAction();


}
