package command;

/**
 * Author: Utkarsh Dayal @ descifrador17
 * Date: 31-05-2021
 * Time: 04:15 AM
 */
public class NoOperationCommand implements ICommand{
    @Override
    public void doAction() {

    }

    @Override
    public void undoAction() {

    }
}
