@startuml

title __COMMAND's Class Diagram__\n

  namespace command {
    class command.AllTurnOffCommand {
        + AllTurnOffCommand()
        + doAction()
        + undoAction()
    }
  }
  

  namespace command {
    class command.AllTurnOnCommand {
        + AllTurnOnCommand()
        + doAction()
        + undoAction()
    }
  }
  

  namespace command {
    class command.BTSpeakerTurnOffCommand {
        + BTSpeakerTurnOffCommand()
        + doAction()
        + undoAction()
    }
  }
  

  namespace command {
    class command.BTSpeakerTurnOnCommand {
        + BTSpeakerTurnOnCommand()
        + doAction()
        + undoAction()
    }
  }
  

  namespace command {
    interface command.ICommand {
        {abstract} + doAction()
        {abstract} + undoAction()
    }
  }
  

  namespace command {
    class command.LightTurnOffCommand {
        + LightTurnOffCommand()
        + doAction()
        + undoAction()
    }
  }
  

  namespace command {
    class command.LightTurnOnCommand {
        + LightTurnOnCommand()
        + doAction()
        + undoAction()
    }
  }
  

  namespace command {
    class command.NoOperationCommand {
        + doAction()
        + undoAction()
    }
  }
  

  command.AllTurnOffCommand .up.|> command.ICommand
  command.AllTurnOffCommand o-- receiver.Light : light
  command.AllTurnOffCommand o-- receiver.BTSpeakers : speakers
  command.AllTurnOnCommand .up.|> command.ICommand
  command.AllTurnOnCommand o-- receiver.Light : light
  command.AllTurnOnCommand o-- receiver.BTSpeakers : speakers
  command.BTSpeakerTurnOffCommand .up.|> command.ICommand
  command.BTSpeakerTurnOffCommand o-- receiver.BTSpeakers : speakers
  command.BTSpeakerTurnOnCommand .up.|> command.ICommand
  command.BTSpeakerTurnOnCommand o-- receiver.BTSpeakers : speakers
  command.LightTurnOffCommand .up.|> command.ICommand
  command.LightTurnOffCommand o-- receiver.Light : light
  command.LightTurnOnCommand .up.|> command.ICommand
  command.LightTurnOnCommand o-- receiver.Light : light
  command.NoOperationCommand .up.|> command.ICommand


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
